--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Germaine Koo - Portfolio</title>
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&family=Instrument+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    
+    <style>
+        body {
+            font-family: 'Instrument Sans', sans-serif;
+            line-height: 1.6;
+            margin: 40px;
+        }
+        h2 {
+            font-family: 'Rubik', sans-serif;
+            font-weight: 600;
+        }
+    </style>
 </head>
 <body>
     <h2>📬 Connect With Me</h2>
